fix: z-index 값 수정 및 css 주석 제거

--- a/src/layout/Header/Dropdown.module.scss
+++ b/src/layout/Header/Dropdown.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   background-color: #f5f5f5;
   box-shadow: 0 5px 7px rgb(0 0 0 / 10%);
-  z-index: 1000;
+  z-index: 10;
   flex-direction: column;
 }
 
